--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.26)
+cmake_minimum_required(VERSION 3.26 FATAL_ERROR)
 
 set(PROJECT_NAME 2d_game_engine)
 
@@ -13,7 +13,8 @@ set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 
-find_package(OpenGL REQUIRED)
-
 add_subdirectory(external/glfw)
-target_link_libraries(${PROJECT_NAME} glfw OpenGL::GL)
+target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
+
+add_subdirectory(external/glad)
+target_link_libraries(${PROJECT_NAME} PRIVATE glad)
