--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ add_executable(${PROJECT_NAME}
         src/main.cpp
         src/Renderer/ShaderProgram.cpp
         src/Renderer/ShaderProgram.h
+        src/Resources/ResourceManager.cpp
+        src/Resources/ResourceManager.h
 )
 
 set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
@@ -23,3 +25,12 @@ target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
 
 add_subdirectory(external/glad)
 target_link_libraries(${PROJECT_NAME} PRIVATE glad)
+
+set_target_properties(
+        ${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/
+)
+
+add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${CMAKE_SOURCE_DIR}/res $<TARGET_FILE_DIR:${PROJECT_NAME}>/res
+)
