--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ add_executable(${PROJECT_NAME}
         src/Renderer/ShaderProgram.h
         src/Resources/ResourceManager.cpp
         src/Resources/ResourceManager.h
+        src/Resources/stb_image.h
+        src/Renderer/Texture2D.cpp
+        src/Renderer/Texture2D.h
 )
 
 set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
