--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
 add_subdirectory(external/glad)
 target_link_libraries(${PROJECT_NAME} PRIVATE glad)
 
+include_directories(external/glm)
+
 set_target_properties(
         ${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/
 )
