--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ add_executable(${PROJECT_NAME}
         src/Resources/stb_image.h
         src/Renderer/Texture2D.cpp
         src/Renderer/Texture2D.h
+        src/Renderer/Sprite.cpp
+        src/Renderer/Sprite.h
 )
 
 set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
