--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ add_executable(${PROJECT_NAME}
         src/Renderer/Sprite.h
         src/Renderer/AnimatedSprite.cpp
         src/Renderer/AnimatedSprite.h
+        src/Game/Game.cpp
+        src/Game/Game.h
 )
 
 set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
