--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,11 +27,15 @@ add_executable(${PROJECT_NAME}
         src/Renderer/VertexBuffer.h
         src/Renderer/IndexBuffer.cpp
         src/Renderer/IndexBuffer.h
+        src/Renderer/VertexArray.cpp
+        src/Renderer/VertexArray.h
 
         src/Game/Game.cpp
         src/Game/Game.h
         src/Game/Tank.cpp
         src/Game/Tank.h
+        src/Renderer/VertexBufferLayout.cpp
+        src/Renderer/VertexBufferLayout.h
 )
 
 set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
