--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,8 @@ add_executable(${PROJECT_NAME}
         src/Game/Tank.h
         src/Renderer/VertexBufferLayout.cpp
         src/Renderer/VertexBufferLayout.h
+        src/Renderer/Renderer.cpp
+        src/Renderer/Renderer.h
 )
 
 set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
