--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,8 @@ target_link_libraries(${PROJECT_NAME} PRIVATE glad)
 
 include_directories(external/glm)
 
+include_directories(external/rapidjson/include)
+
 set_target_properties(
         ${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/
 )
